--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ecoleta </title>
         <link rel="stylesheet" href="/style/main.css">
+        <link rel="stylesheet" href="/style/home.css">
+        <link rel="stylesheet" href="/style/modal.css">
+        <link rel="stylesheet" href="/style/responsive.css">
     </head>
     <body>
         <div id="page-home">
             <div class="content">
                 <header>
                     <img src="/icones/logo.svg" alt="Logomarca">
-                    <a href="http://google.com.br">
+                    <a href="/create-point.html">
                         <span></span>
                         Cadastre um ponto de coleta</a>
                 </header>
@@ -26,6 +29,24 @@
             </div>
         </div>
         
+        <div id="modal" class="hide">
+            <div class="content">
+                <div class="header">
+                    <h1>Pontos de coleta</h1>
+                    <a href="#">Fechar</a>
+                </div>
+                <form action="">
+                    <label for="search">Cidade</label>
+                    <div class="search field">
+                        <input type="text" name="search" placeholder="Pesquise por Cidade">
+                        <button>
+                            <img src="/icones/search.svg" alt="Buscar">
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
 
+        <script src="/scripts/index.js"></script>
     </body>
 </html>
